[tool.poetry]
name = "lsattrdict"
version = "0.1.0"
description = "fork of dead AttrDict project"
authors = ["<bsimpson888@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"

[tool.poetry.dev-dependencies]
lscli = "^3.0"
coverage = "^5.5"
flake8 = "^3.8.4"
nose = "^1.3.7"
python-coveralls = "^2.9.3"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
